# icfpc-2012

./: README  install  lifter
doc/: Makefile  README.md  change_code_blocks.hs  use-russian.tex  write-up.md
src/: CMakeLists.txt
src/apply/: CMakeLists.txt  main.cpp
src/finder/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  annealing.cpp  annealing.h  board.cpp  board.h  board_reader.cpp  board_reader.h  cell_type.h  clear_screen.h  cmake_install.cmake  common.h  flood.h  getch.h  greedy_finder.cpp  greedy_finder.h  greedy_solution.cpp  greedy_solution.h  growth.h  interruptable_multi_solver.cpp  interruptable_multi_solver.h  local_annealing.cpp  local_annealing.h  local_part_solver.cpp  local_part_solver.h  make_moves.h  move.h  multisolver.cpp  multisolver.h  parts_splitter.cpp  parts_splitter.h  pathfinder.cpp  pathfinder.h  position.h  sandbox.cpp  sandbox.h  scores.cpp  scores.h  solution.h  solver_by_split_and_exact.cpp  solver_by_split_and_exact.h  (+6 more)
src/parts/: CMakeLists.txt  main.cpp
src/play/: CMakeLists.txt  main.cpp
src/sandbox/: CMakeLists.txt  main.cpp
src/submit/: CMakeLists.txt  main.cpp
src/testing/: CMakeLists.txt  main.cpp
