add_library (lib
        interruptable_multi_solver.h
        interruptable_multi_solver.cpp
        growth.h
        flood.h
        teleports.h
        teleports.cpp
        make_moves.h
        move.h
        sandbox.h
        sandbox.cpp
        scores.h
        solver_by_split_and_exact.h
        solver_by_split_and_exact.cpp
        local_part_solver.h
        local_part_solver.cpp
        scores.cpp
        clear_screen.h
        solution.h
        board_reader.h
        board_reader.cpp
        greedy_solution.h
        greedy_solution.cpp
        solution.h
        getch.h
        parts_splitter.h
        parts_splitter.cpp
        pathfinder.h
        pathfinder.cpp
        position.h
        common.h
        cell_type.h
        board.h
        board.cpp
        tester.h
        tester.cpp
        annealing.h
        annealing.cpp
        tester.h
        tester.cpp
        local_annealing.h
        local_annealing.cpp
        traverser.h
        traverser.cpp
        multisolver.h
        multisolver.cpp) 
